--- a/config.json
+++ b/config.json
@@ -12,7 +12,8 @@
         "visualization stats",
         "collaboration"
     ],
-    "docker_image": "supervisely/collaboration:6.72.192",
+    "docker_image": "supervisely/collaboration:6.73.4",
+    "instance_version": "6.8.73",
     "context_menu": {
         "target": [
             "videos_project",
